# cmd/server/wire_gen.go
@@ -40,8 +40,11 @@ func wireApp(confServer *conf.Server, confData *conf.Data, logger *slog.Logger) 
 	orderRepo := data.NewOrderRepo(dataData)
 	orderUsecase := biz.NewOrderUsecase(orderRepo)
 	orderService := service.NewOrderService(orderUsecase)
-	grpcServer := server.NewGRPCServer(confServer, todoService, userService, addressService, orderService)
-	httpServer := server.NewHTTPServer(confServer, todoService, userService, addressService, orderService)
+	freightRepo := data.NewFreightRepo(dataData)
+	freightUsecase := biz.NewFreightUsecase(freightRepo)
+	freightService := service.NewFreightService(freightUsecase)
+	grpcServer := server.NewGRPCServer(confServer, todoService, userService, addressService, orderService, freightService)
+	httpServer := server.NewHTTPServer(confServer, todoService, userService, addressService, orderService, freightService)
 	app := newApp(logger, grpcServer, httpServer)
 	return app, func() {
 		cleanup()
